# ur3e_pick_place_ws

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: gz_bridge.yaml
src/Universal_Robots_ROS2_Description/config/ur3e/: joint_limits.yaml
src/Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
src/Universal_Robots_ROS2_Driver/ur_controllers/src/: scaled_joint_trajectory_controller.cpp  ur_configuration_controller.cpp
src/rh_p12_rn_a_description/: CMakeLists.txt  package.xml
src/rh_p12_rn_a_description/launch/: check_urdf.launch.py
src/rh_p12_rn_a_description/rviz/: urdf.rviz
src/rh_p12_rn_a_description/urdf/: rh_p12_rn_a.gazebo  rh_p12_rn_a.xacro  rh_p12_rn_a_control.xacro  rh_p12_rn_a_gripper.xacro
src/rh_p12_rn_a_gazebo/: CMakeLists.txt  package.xml
src/rh_p12_rn_a_gazebo/config/: position_controller.yaml
src/rh_p12_rn_a_gazebo/launch/: rh_p12_rn_a_gazebo.launch.py  world.launch.py
src/rh_p12_rn_a_gazebo/rviz/: rviz.rviz
src/ur3e_vision_pick_place/: README.md  setup.py
src/ur3e_vision_pick_place/example_code/: path_interpolation.py  trajectory_profile.py
src/ur3e_vision_pick_place/launch/: ur3e_pick_place.launch.py  ur3e_pick_place_test2.launch.py
src/ur3e_vision_pick_place/ur3e_vision_pick_place/: color_detector_v2.py  forward_kinematics.py  forward_kinematics_pure.py  ik_pick_place.py  ik_pick_place_6dof.py  inverse_kinematics.py  joint_tester.py  object_detector_3d.py  path_interpolation.py  pick_and_place.py  trapezoidal_planner.py
src/ur3e_vision_pick_place/worlds/: pick_place_test2.sdf
ur3e_vision_pick_place/: color_detector.py  color_tuner.py  object_detector_3d.py  pick_and_place.py  single_color_detector.py
urdf/: gripper_camera.gazebo.xacro  gripper_camera.xacro
worlds/: pick_place_world.sdf
(+5 files in other folders)
