<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_vision_pick_place</name>
  <version>0.0.0</version>
  <description>Vision-based pick and place with UR3e robot arm using ROS2 Jazzy and Gazebo Harmonic</description>
  <maintainer email="herrtejasmurkute@gmail.com">herrtejas</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ur_simulation_gz</depend>
  <depend>ur_moveit_config</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
