<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rh_p12_rn_a_gazebo</name>
  <version>1.0.0</version>
  <description>This package provides basic message pub and launch file to use RH-P12-RN-A on Gazebo Harmonic</description>
  <maintainer email="david.dudas@outlook.com">David Dudas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
